--- a/demo2/src/demo2.UI.Web/demo2.UI.Web.csproj
+++ b/demo2/src/demo2.UI.Web/demo2.UI.Web.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0-preview3-35497" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0-preview3-35497" />
   </ItemGroup>
 
 
