--- a/demo2/src/demo2.UI.Web/appsettings.json
+++ b/demo2/src/demo2.UI.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Demo2DbProduction": "DataSource=./App_Data/Demo2DbProduction.db"
+    "DefaultConnection": "DataSource=./App_Data/Demo2DbProduction.db"
   },
   "Logging": {
     "LogLevel": {
