--- a/demo2/src/demo2.UI.Web/demo2.UI.Web.csproj
+++ b/demo2/src/demo2.UI.Web/demo2.UI.Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0-preview3-35497" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0-preview3-35497" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0-preview3-35497" />
@@ -19,6 +20,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Configuration\Settings\" />
+    <Folder Include="wwwroot\CameraPhotos\" />
+    <Folder Include="wwwroot\webcamjs\" />
   </ItemGroup>
 
 
